# find-max-opencl

./: CMakeLists.txt  README.md  results.csv  run.bat
src/: kernels.cl  main.cpp
